# Arduino-DroneCAN

./: .gitignore  .gitmodules  LICENSE  README.md  platformio.ini  upload_bootloader_app.py
boards/: BRCoreNode.json  CoreNode.json
examples/CPU_Temp/: README.md  main.cpp
examples/HC_SR04/: README.md  main.cpp
examples/INA_current_sensor/: README.md  main.cpp
examples/Magnetometer_listener/: README.md  main.cpp
examples/Servo_test/: README.md  main.cpp
examples/thermocouple-MCP9600/: README.md  main.cpp
lib/libArduinoDroneCAN/src/: canH7.cpp  canH7.h  canH723.cpp  canH7nonFD.cpp  dronecan.cpp  dronecan.h
src/: main.cpp
tests/: .gitignore  AGENT.md  QUICKSTART.md  README.md  UV_MIGRATION.md  __init__.py  build_upload_test.py  check_port.py  conftest.py  diagnostic_connection.py  diagnostic_reset_slcan.py  diagnostic_serial_baud.py  listen_all.py  pyproject.toml  pytest.ini  simple_listen.py  test.py  test_battery_messages.py  test_can_discovery.py  test_config.yaml  test_heartbeat.py  test_message_reception.py  test_node.py  test_parameters.py
tests/examples/: example_custom_test.py
tests/utils/: __init__.py  message_validator.py  timing_helpers.py
variants/CoreNode/: PeripheralPins.c  generic_clock.c  variant_CORENODE.cpp  variant_CORENODE.h
variants/MicroNode/: variant_MICRONODE.cpp
