[project]
name = "tests"
version = "0.1.0"
description = "CAN network discovery tests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydronecan",
    "pyserial>=3.5",
    "python-can>=4.6.1",
]

[project.scripts]
can-discovery = "test_can_discovery:main"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]

[tool.ty]
environment.python = ".venv"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
