[project]
name = "tests"
version = "0.1.0"
description = "CAN network discovery tests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydronecan",
    "pyserial>=3.5",
    "python-can>=4.6.1",
    "pytest>=8.0",
]

[project.scripts]
can-discovery = "test_can_discovery:main"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]

[tool.pytest.ini_options]
filterwarnings = [
    # dronecan's PythonCAN passes 'bustype' instead of 'interface' — upstream issue
    "ignore:The 'bustype' argument is deprecated:DeprecationWarning",
]

[tool.ty]
environment.python = ".venv"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
